--- a/popup/index.html
+++ b/popup/index.html
@@ -3,21 +3,42 @@
 
 <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="../assets/material.min.css">
+    <link rel="stylesheet" href="../assets/material.min.css.map">
+    <script src="../assets/material.min.js"></script>
+    <script src="../assets/material.min.js.map"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
-    <div id="popup-content" style="width:300px" >
+    <div id="popup-content" style="width:300px; display:flex; align-items:center; flex-direction: column; ">
         <div id="logo">
             <img src="/images/zen.png" alt="Youtube Zen">
         </div>
-        <div id="description" style="text-align: center; padding: 10px 0;" >
+        <div id="description" style="text-align: center; padding: 10px 0;">
             Hides or shows the Youtube video controls when paused
         </div>
-        <div id="controls">
-            <button id="show-btn" >
+
+        <div style="width:90%; height:1px; background-color: rgba(0,0,0,.12);"></div>
+
+        <div id='tab-sel' style="display:flex; align-items:flex-start; flex-direction: column;">
+            <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="tab-opt-1">
+                <input type="radio" id="tab-opt-1" class="mdl-radio__button" name="tabs" value="0" checked>
+                <span class="mdl-radio__label">Current Tab only</span>
+            </label>
+            <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="tab-opt-2">
+                <input type="radio" id="tab-opt-2" class="mdl-radio__button" name="tabs" value="1">
+                <span class="mdl-radio__label">All Tabs</span>
+            </label>
+        </div>
+
+        <div style="width:90%; height:1px; background-color: rgba(0,0,0,.12);"></div>
+
+        <div id="controls" style="width:calc(100% - 20px); display:flex; justify-content: center; padding: 10px">
+            <button id="show-btn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored">
                 SHOW
             </button>
-            <button id="hide-btn" >
+            <button id="hide-btn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored mdl-button--accent">
                 HIDE
             </button>
         </div>
