Added keyboard toggle key (H)

--- a/popup/index.html
+++ b/popup/index.html
@@ -16,7 +16,8 @@
             <img src="/images/zen.png" alt="Youtube Zen">
         </div>
         <div id="description" style="text-align: center; padding: 10px 0;">
-            Hides or shows the Youtube video controls when paused
+            Hides or shows the Youtube video controls. You can toggle 
+            the visibility in the current tab by pressing "H"
         </div>
 
         <div style="width:90%; height:1px; background-color: rgba(0,0,0,.12);"></div>
