Removed target all tabs Hide in iFrame Other bug fixes

--- a/popup/index.html
+++ b/popup/index.html
@@ -15,23 +15,12 @@
         <div id="logo">
             <img src="/images/zen.png" alt="Youtube Zen">
         </div>
-        <div id="description" style="text-align: center; padding: 10px 0;">
+        <div id="description" style="text-align: center; padding: 10px 10px;">
             Hides or shows the Youtube video controls. You can toggle 
             the visibility in the current tab by pressing "H"
         </div>
 
         <div style="width:90%; height:1px; background-color: rgba(0,0,0,.12);"></div>
-
-        <div id='tab-sel' style="display:flex; align-items:flex-start; flex-direction: column;">
-            <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="tab-opt-1">
-                <input type="radio" id="tab-opt-1" class="mdl-radio__button" name="tabs" value="0" checked>
-                <span class="mdl-radio__label">Current Tab only</span>
-            </label>
-            <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="tab-opt-2">
-                <input type="radio" id="tab-opt-2" class="mdl-radio__button" name="tabs" value="1">
-                <span class="mdl-radio__label">All Tabs</span>
-            </label>
-        </div>
 
         <div style="width:90%; height:1px; background-color: rgba(0,0,0,.12);"></div>
 
