--- a/popup/index.html
+++ b/popup/index.html
@@ -1,39 +1,30 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="./styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    </head>
 
-<head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="../assets/material.min.css">
-    <link rel="stylesheet" href="../assets/material.min.css.map">
-    <script src="../assets/material.min.js"></script>
-    <script src="../assets/material.min.js.map"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-</head>
+    <body>
+        <div id="popup-content" style="width: 300px; display: flex; align-items: center; flex-direction: column">
+            <div id="logo"><img src="/images/zen.png" alt="Youtube Zen" /></div>
+            <div id="description" style="text-align: center; padding: 10px 10px">
+                Hides or shows the Youtube video controls. You can toggle the visibility in the current tab by pressing
+                "H"
+            </div>
 
-<body>
-    <div id="popup-content" style="width:300px; display:flex; align-items:center; flex-direction: column; ">
-        <div id="logo">
-            <img src="/images/zen.png" alt="Youtube Zen">
+            <div style="width: 90%; height: 1px; background-color: rgba(0, 0, 0, 0.12)"></div>
+
+            <div style="width: 90%; height: 1px; background-color: rgba(0, 0, 0, 0.12)"></div>
+
+            <div id="controls" style="width: calc(100% - 20px); display: flex; justify-content: center; padding: 10px">
+                <button id="show-btn" class="flat-button">SHOW</button>
+                <button id="hide-btn" class="flat-button">HIDE</button>
+            </div>
         </div>
-        <div id="description" style="text-align: center; padding: 10px 10px;">
-            Hides or shows the Youtube video controls. You can toggle 
-            the visibility in the current tab by pressing "H"
-        </div>
-
-        <div style="width:90%; height:1px; background-color: rgba(0,0,0,.12);"></div>
-
-        <div style="width:90%; height:1px; background-color: rgba(0,0,0,.12);"></div>
-
-        <div id="controls" style="width:calc(100% - 20px); display:flex; justify-content: center; padding: 10px">
-            <button id="show-btn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored">
-                SHOW
-            </button>
-            <button id="hide-btn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored mdl-button--accent">
-                HIDE
-            </button>
-        </div>
-    </div>
-    <script src="./index.js"></script>
-</body>
-
+        <script src="./index.js"></script>
+    </body>
 </html>
